feat: 测试完 jwt 功能，待完善

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=canyu-testuser
 spring.data.mongodb.password=englsajdoifuas
 spring.data.mongodb.database=canyu
+
+
+security.jwt.token.secret-key: xxxxx
+security.jwt.token.expire-length: 36000
